--- a/easeupload/public/index.html
+++ b/easeupload/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -9,12 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +39,37 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+  <!-- </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>File Upload</title>
+</head>
+<body>
+  <h1>Upload Document</h1>
+  
+  <!-- Form to upload file -->
+  <form action="http://localhost/backend/uploadDocument.php" method="POST" enctype="multipart/form-data">
+    <label for="file">Choose a file to upload:</label><br>
+    <input type="file" name="file" id="file" required><br><br>
+    
+    <button type="submit">Upload File</button>
+  </form>
+
+  <br><br>
+
+  <div>
+    <h2>Instructions</h2>
+    <ul>
+      <li>Ensure that your backend (XAMPP) is running and the `uploadDocument.php` script is correctly set up to handle file uploads.</li>
+      <li>The file will be uploaded to the `uploads/` folder in your project directory.</li>
+      <li>The file path will also be stored in your database (assuming the database connection and query are correctly set up in the PHP script).</li>
+    </ul>
+  </div>
+</body>
 </html>
+
